# haven-sovereign

./: .env.example  .gitignore  AGENTS.md  COPY_PASTE_POSTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  FILE_INDEX.md  FINAL_MESSAGE.md  FORENSIC_REPORT_PROJECT_DRAGON_403_HILO_V2.md  GITHUB_RELEASE_NOTES.md  HAVEN_GITHUB_README.md  Haven IDE API.postman_test_run.json  LAUNCH_CHECKLIST_FINAL.md  LICENSE.md  PRINCIPLES.md  PROJECT_STATUS.md  PUBLISHING_STRATEGY.md  QUICK_DECISION.md  README.md  READ_THIS_FIRST.md  RELEASE_CHECKLIST.md  RELEASE_v5.0.md  SECURITY.md  SIMPLE_PUBLISHING_STEPS.md  START_HERE.md  TECHNICAL_DEEP_DIVE.md  VISUAL_SUMMARY.md  generate_report_pdf.cjs  haven-landing-advanced.html  haven-landing.html  haven-sovereign-v2.html  huggingface.huggingface-vscode-0.0.38.vsix  index.html  master_Building_v5.sh  metadata.json  niyah-v3.modelfile  niyah-v4.Modelfile  package-lock.json  package.json  (+10 more)
.postman/: resources.yaml
.tmp-build/: playwright-ai-after-12s-noshot.js  playwright-ai-after-18s.js  playwright-check-ai.js  playwright-find-inputs.js  playwright-measure-ai.js  playwright-panels-check.js
docs/: UNIFIED_ARCHITECTURE.md  desktop-updates.md
infra/: bluvalt-provision.sh  build-haven-os-h1.sh  build-haven-os.sh  deploy-khawrizm.sh  organize-haven-h1.sh
niyah-core/: Cargo.toml  bridge.rs  cli.rs  forensics.rs  gateway.rs  phalanx.rs  reviewer.rs
scripts/: generate-update-manifest.mjs  run-niyah-cli.mjs  sync-versions.mjs
src/: App.tsx  gun.d.ts  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: haven-core.toml
src-tauri/src/: lib.rs  main.rs
src/evaluation/: README.md  metrics.ts  runEvaluation.ts  testCases.json
src/hooks/: useCountUp.ts  useInView.ts  useMouseGlow.ts  useTilt.ts  (+3 more)
(+1427 files in other folders)
