[package]
name = "niyah-core-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "niyah-bridge"
path = "bridge.rs"

[[bin]]
name = "niyah"
path = "cli.rs"

[dependencies]
# Dependencies will be added as needed for forensics
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
