[package]
name = "haven-sovereign-desktop"
version = "5.0.0"
description = "HAVEN Sovereign desktop shell powered by Tauri."
authors = ["Sulaiman Alshammari <iqd@hotmail.com>"]
license = "SEE LICENSE IN ../LICENSE.md"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "haven_sovereign_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["io-util", "process", "time"] }
